--- a/index.html
+++ b/index.html
@@ -1,9 +1,42 @@
+<!DOCTYPE html>
+<html lang="en">
+  
+  <head>    
+    <style>
+      .container {
+        <!-- width: 600px; -->
+        padding: 2em;
+        
+        text-align: center;
+      }
 
-<p>Hello LeeKeypad, 大家好</p>
-<p>我是霸都丶傲天，这是我的个人网站。 </p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
+      ul {
+        display: inline-block;
+        text-align: left;
+      }
 
-<ul>
-  <li> <a href="https://www.zhihu.com/people/AJLoveChina">知乎</a> </li>
-  <li> <a href="http://hejie.nigeerhuo.com">我的博客(已经不更细了,现在在知乎写文章)</a> </li>
-</ul>
+      .align-center {
+        text-align: center;
+      }
+    </style>
+  </head>
+
+  <body>
+  <h1><p style="text-align:center">Xeyboard</p></h1>  
+  <br>  </br>
+  
+  <div  class="container">      
+      <p style="text-align:center">If you have any guestions or need any helps, please don't hesitate to contanct us:</p> 
+  </div>  
+  </body>  
+
+  <br>  </br>
+  <br>  </br>
+  <div style="text-align:center">
+     <a href="https://leekeypad.github.io">Please read License Agreement & Private Policy, it is a very importiant document!</a> 
+  </div>
+
+  <bottom>
+    <p style="text-align:center">©2024 Xeyboard Corporation. All rights reserved</p>
+  </bottom>
+</html>
