--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <br>  </br>
   
   <div  class="container">      
-      <p style="text-align:center">If you have any guestions or need any helps, please don't hesitate to contanct us:</p> 
+      <p style="text-align:center">No net connectivity to any of developer's servers. All of personal data you type like email address, phone number, passwords, credit card number and bank account are safe. It is only saved on your device with your permission for your later reuse.</p> 
   </div>  
   </body>  
 
