--- a/index.html
+++ b/index.html
@@ -26,18 +26,16 @@
   <br>  </br>
   
   <div class="container">      
-    <p style="text-align:center">No net connectivity to any of developer's servers./p> 
+    <p style="text-align:center">No net connectivity to any of developer's servers.</p> 
     <p style="text-align:center">All of personal data you type like email address, phone number, passwords, credit card number and bank account are safe.</p> 
     <p style="text-align:center">It is only saved on your device with your permission for your later reuse.</p> 
-  </div>  
+  </div>
+    
   </body>  
 
   <br>  </br>
   <br>  </br>
-  <div style="text-align:center">
-     <a href="https://leekeypad.github.io">Please read License Agreement & Private Policy, it is a very importiant document!</a> 
-  </div>
-
+  
   <bottom>
     <p style="text-align:center">©2024 Xeyboard Corporation. All rights reserved</p>
   </bottom>
