--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   
   <head>    
     <style>
+        div.content { 
+            margin: 100px;
+            border: 1px solid white;
+        }
+      
       .container {
         <!-- width: 600px; -->
         padding: 2em;
