--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         div.content { 
             margin: 100px;
             border: 1px solid white;
+            line-height: 1.5;    
         }
       
       .container {
