--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
   <br>  </br>
   
   <div class="content">      
-    <p style="text-align:center">No net connectivity to any of developer's servers.</p> 
-    <p style="text-align:center">All of personal data you type like email address, phone number, passwords, credit card number and bank account are safe.</p> 
-    <p style="text-align:center">It is only saved on your device with your permission for your later reuse.</p> 
+    <p style="text-align:center">No net connectivity to any of developer's servers. All of personal data you type like email address, phone number, passwords, credit card number and bank account are safe. It is only saved on your device with your permission for your later reuse.</p> 
   </div>
     
   </body>  
