--- a/index.html
+++ b/index.html
@@ -32,14 +32,10 @@
   <br>  
   
   <div class="content">      
-    <p style="text-align:center">No net connectivity to any of developer's servers. All of personal data you type with Xeyboard like email address, phone number, passwords, credit card number and bank account are safe. It is only saved on your device with your permission for your later reuse.</p> 
-  </div>
-    
-  </body>  
-
-  
-  <br>  </br>
-  
+    <p>No net connectivity to any of developer's servers. All of personal data you type with Xeyboard like email address, phone number, passwords, credit card number and bank account are safe. It is only saved on your device with your permission for your later reuse.</p> 
+  </div>    
+  </body>
+  <br>
   <bottom>
     <p style="text-align:center">©2024 Xeyboard Corporation. All rights reserved</p>
   </bottom>
