--- a/index.html
+++ b/index.html
@@ -1,39 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-  
+<html lang="en">  
   <head>    
     <style>
         div.content { 
             margin: 100px;
             border: 1px solid white;
             line-height: 2.0;    
-        }
-      
+        }      
       .container {
         <!-- width: 600px; -->
         padding: 2em;
         
         text-align: center;
       }
-
       ul {
         display: inline-block;
         text-align: left;
       }
-
       .align-center {
         text-align: center;
       }
     </style>
   </head>
-
   <body>
   <h1><p style="text-align:center">Xeyboard -  Privacy Policy</p></h1>  
-  <br>  
-  
-  <div class="content">      
-    <p>No net connectivity to any of developer's servers. All of personal data you type with Xeyboard like email address, phone number, passwords, credit card number and bank account are safe. It is only saved on your device with your permission for your later reuse.</p> 
-  </div>    
+  <br>
+    <div class="content">      
+      <p style="text-align:center">No net connectivity to any of developer's servers. All of personal data you type with Xeyboard like email address, phone number, passwords, credit card number and bank account are safe. It is only saved on your device with your permission for your later reuse.</p> 
+    </div>    
   </body>
   <br>
   <bottom>
