--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
       .align-center {
         text-align: center;
       }
+      p {  
+      text-align: justify; /* 设置文本为两端对齐 */  
+    }  
     </style>
   </head>
   <body>
@@ -42,7 +45,7 @@
     </p>
   </h1>
      <div class="content">      
-       <p style="text-align:center">
+       <p style="text-align:justify">
          No net connectivity to any of developer's servers. All of personal data you type with Xeyboard like email address, phone number, passwords, credit card number and bank account are safe. It is only saved on your device with your permission for your later reuse. Xeyboard commits to protecting users' privacy.
        </p> 
      </div>    
